crates/store/re_importer/src/importer_mcap/tests/snapshots/foxglove_raw_image.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/test_suite.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/foxglove_raw_image.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                              │
│ * entity_path: /camera/raw_image                                                                                                                                                                                                       │
│ * id: [**REDACTED**]                                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_log_time              ┆ message_publish_time           ┆ timestamp                     ┆ CoordinateFrame:frame          ┆ Image:buffer                   ┆ Image:format                   │ │
│ │ ---                            ┆ ---                           ┆ ---                            ┆ ---                           ┆ ---                            ┆ ---                            ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)            ┆ type: Timestamp(ns)           ┆ type: List(Utf8)               ┆ type: List(List(non-null       ┆ type: List(Struct("width":     │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_log_time  ┆ index_name:                    ┆ index_name: timestamp         ┆ archetype: CoordinateFrame     ┆ UInt8))                        ┆ non-null UInt32, "height":     │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true               ┆ message_publish_time           ┆ is_sorted: true               ┆ component:                     ┆ archetype: Image               ┆ non-null UInt32,               │ │
│ │ {"namespace":"row"}            ┆ kind: index                   ┆ is_sorted: true                ┆ kind: index                   ┆ CoordinateFrame:frame          ┆ component: Image:buffer        ┆ "pixel_format": UInt8,         │ │
│ │ ARROW:extension:name: TUID     ┆                               ┆ kind: index                    ┆                               ┆ component_type:                ┆ component_type: ImageBuffer    ┆ "color_model": UInt8,          │ │
│ │ is_sorted: true                ┆                               ┆                                ┆                               ┆ TransformFrameId               ┆ kind: data                     ┆ "channel_datatype": UInt8))    │ │
│ │ kind: control                  ┆                               ┆                                ┆                               ┆ kind: data                     ┆                                ┆ archetype: Image               │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆                                ┆ component: Image:format        │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆                                ┆ component_type: ImageFormat    │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆                                ┆ kind: data                     │ │
│ ╞════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 2026-02-11T11:30:54.931614976 ┆ 2026-02-11T11:30:54.931614976  ┆ 2026-02-11T11:30:54.931614976 ┆ [camera_frame_image_plane]     ┆ [[255, 0, 0, 255, 127, 0, 255, ┆ [{width: 10, height: 10,       │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆ 255, 0, 0, 255, 0, 0, 0, 255,  ┆ pixel_format: null,            │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆ 75, 0, 130, 148, 0, 211, 255,  ┆ color_model: 2,                │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆ 0, 0, 25…                      ┆ channel_datatype: 6}]          │ │
│ └────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
