crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_illuminance.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_illuminance.mcap
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                         │
│ * entity_path: /env/illuminance                                                                                                                                                                                                   │
│ * id: [**REDACTED**]                                                                                                                                                                                                              │
│ * version: [**REDACTED**]                                                                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┐ │
│ │ RowId                     ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame:frame     ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       │ │
│ │ type: non-null            ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: List(Utf8)          ┆ type: List(Utf8)          ┆ type: List(Float64)       ┆ type: List(Float64)       │ │
│ │ FixedSizeBinary(16)       ┆ index_name:               ┆ index_name:               ┆ index_name:               ┆ archetype:                ┆ archetype: Measurements   ┆ archetype: Measurements   ┆ archetype: Measurements   │ │
│ │ ARROW:extension:metadata: ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame           ┆ component:                ┆ component:                ┆ component:                │ │
│ │ {"namespace":"row"}       ┆ is_sorted: true           ┆ is_sorted: true           ┆ is_sorted: true           ┆ component:                ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ARROW:extension:name:     ┆ kind: index               ┆ kind: index               ┆ kind: index               ┆ CoordinateFrame:frame     ┆ component_type: Unit      ┆ component_type: Scalar    ┆ component_type: Variance  │ │
│ │ TUID                      ┆                           ┆                           ┆                           ┆ component_type:           ┆ kind: data                ┆ kind: data                ┆ kind: data                │ │
│ │ is_sorted: true           ┆                           ┆                           ┆                           ┆ TransformFrameId          ┆                           ┆                           ┆                           │ │
│ │ kind: control             ┆                           ┆                           ┆                           ┆ kind: data                ┆                           ┆                           ┆                           │ │
│ ╞═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╡ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.12207 ┆ 2026-09-02T12:08:52.12207 ┆ 2026-09-02T12:08:52.12207 ┆ [light_sensor]            ┆ [lux]                     ┆ [500.0]                   ┆ [0.0]                     │ │
│ │                           ┆ 6                         ┆ 6                         ┆ 6                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.22207 ┆ 2026-09-02T12:08:52.22207 ┆ 2026-09-02T12:08:52.22207 ┆ [light_sensor]            ┆ [lux]                     ┆ [520.0]                   ┆ [5.45]                    │ │
│ │                           ┆ 6                         ┆ 6                         ┆ 6                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.32207 ┆ 2026-09-02T12:08:52.32207 ┆ 2026-09-02T12:08:52.32207 ┆ [light_sensor]            ┆ [lux]                     ┆ [0.5]                     ┆ [0.255]                   │ │
│ │                           ┆ 6                         ┆ 6                         ┆ 6                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.42207 ┆ 2026-09-02T12:08:52.42207 ┆ 2026-09-02T12:08:52.42207 ┆ [light_sensor]            ┆ [lux]                     ┆ [0.5]                     ┆ [0.255]                   │ │
│ │                           ┆ 6                         ┆ 6                         ┆ 6                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.52207 ┆ 2026-09-02T12:08:52.52207 ┆ 2026-09-02T12:08:52.52207 ┆ [light_sensor]            ┆ [lux]                     ┆ [480.0]                   ┆ [5.05]                    │ │
│ │                           ┆ 6                         ┆ 6                         ┆ 6                         ┆                           ┆                           ┆                           ┆                           │ │
│ └───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
